...
                modifier = Modifier.fillMaxWidth(),
                verticalArrangement = Arrangement.spacedBy(16.dp)
            ) {
                val popularity = stringResource(id = R.string.artist_additional_info_popularity)
                val birthDate = stringResource(id = R.string.artist_additional_info_birth_date)
                ArtistInfoRow(label = birthDate, value = DateUtils.formatAlbumDate(uiState.artist?.birthDate))
                ArtistInfoRow(label = popularity, value = "★★★★☆")
            }

            // Add bottom padding for better scrolling experience
            Spacer(modifier = Modifier.height(32.dp))
        }
    }
}

@Composable
fun AlbumCard(
    album: ArtistAlbum,
    onClick: () -> Unit
) {
    Card(
        modifier = Modifier
            .width(140.dp)
            .clickable(onClick = onClick),
...
